--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 			<div class="row">
 				<div class="col-md-5"></div>
 				<div class="col-md-7">
-					<div class="lp-element animate" data-animate="fadeInDown">
-						<h1>Promo</h1>
+					<div class="" data-animate="">
+						<!-- <h1>Promo</h1>
 						<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-						<p><a class="btn btn-primary btn-lg" role="button">Purchase Now</a> <a class="btn btn-danger btn-lg" role="button">See Gallery</a></p>
+						<p><a class="btn btn-primary btn-lg" role="button">Purchase Now</a> <a class="btn btn-danger btn-lg" role="button">See Gallery</a></p> -->
 					</div>
 				</div>
 			</div>
