--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 	          <a href="#newsletter">Subscribe</a>
 	        </li>
 	      </ul>
-	      <ul class="nav navbar-nav navbar-right header-button">
+	      <!-- <ul class="nav navbar-nav navbar-right header-button">
 	        <li>
 	          <button type="button" class="btn btn-primary">Purchase Now</button>
 	        </li>
-	      </ul>
+	      </ul> -->
 	    </nav>
 	  </div>
 	</header>
