--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 	        <li>
 	          <a href="#slider">Testimonials</a>
 	        </li>
-	        <li>
+	        <!-- <li>
 	          <a href="#newsletter">Subscribe</a>
-	        </li>
+	        </li> -->
 	      </ul>
 	      <!-- <ul class="nav navbar-nav navbar-right header-button">
-	        <li>
+	        <li>it status
 	          <button type="button" class="btn btn-primary">Purchase Now</button>
 	        </li> -->
 	      </ul>
